--- a/index.html
+++ b/index.html
@@ -9,17 +9,17 @@
   <body>
     <header>
       <nav>
-        <a href="/">WebStudio</a>
+        <a href="./index.html">WebStudio</a>
         <ul>
-          <li><a href="/studio">Studio</a></li>
-          <li><a href="/portfolio">Portfolio</a></li>
-          <li><a href="/contacts">Contacts</a></li>
+          <li><a href="">Studio</a></li>
+          <li><a href="">Portfolio</a></li>
+          <li><a href="">Contacts</a></li>
         </ul>
       </nav>
-      <ul>
+      <address>
         <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
         <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
-      </ul>
+      </address>
     </header>
 
     <main>
@@ -28,6 +28,7 @@
         <button type="button">Order Service</button>
       </section>
       <section>
+        <h2 hidden>Our work</h2>
         <ul>
           <li>
             <h3>Strategy</h3>
@@ -93,7 +94,7 @@
         <ul>
           <li>
             <img
-              src="/images/photo_product.jpg"
+              src="./images/photo_product.jpg"
               alt="Photo Product Designer"
               width="264"
               height="260"
@@ -103,7 +104,7 @@
           </li>
           <li>
             <img
-              src="/images/photo_frontend.jpg"
+              src="./images/photo_frontend.jpg"
               alt="Photo Frontend Developer"
               width="264"
               height="260"
@@ -113,7 +114,7 @@
           </li>
           <li>
             <img
-              src="/images/photo_marketing.jpg"
+              src="./images/photo_marketing.jpg"
               alt="Photo Marketing"
               width="264"
               height="260"
@@ -123,7 +124,7 @@
           </li>
           <li>
             <img
-              src="/images/photo_ui.jpg"
+              src="./images/photo_ui.jpg"
               alt="Photo UI Designer"
               width="264"
               height="260"
@@ -135,7 +136,7 @@
       </section>
     </main>
     <footer>
-      <a href="/">WebStudio</a>
+      <a href="./index.html">WebStudio</a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
